--- a/PS2.Rmd
+++ b/PS2.Rmd
@@ -5,7 +5,7 @@ author: Alma Velazquez
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_chunk$set(echo = TRUE, tidy=TRUE)
 ```
 
 
@@ -60,56 +60,58 @@ or both.  The output should be a list containing the results,
 \textit{including the full digit distribution}.
 
 ### Define Function
+
 ```{r}
-# Question 1 Code
+
 benfords_stats <- function(x, d=TRUE, m=TRUE){
+  
+  # Input must satisfy these things for the rest to work
   criteria <- is.numeric(x) & (is.vector(x) | is.matrix(x))
   if(!criteria){
     stop("Error: x must be a vector or matrix input of type numeric.")
   }
   
+  # Include logical inputs to define a method later
   stats <- list("d"=d, "m"=m)
   
-  first_sigfigs <- as.integer(substr(as.character(as.integer(signif(x,1))),1,1))
+  # Extract the first significant figure from input
+  # Use table() and prop.table() to get the proportional frequency of each digit
+  first_sigfigs <- prop.table(table(factor(as.integer(substr(as.character(as.integer(signif(x,1))),
+                                                             1,1)), levels = 1:9)))
   
-  x_i <- rep(NA, 9)
-  for(i in 1:9){
-    x_i[i] <- sum(first_sigfigs==i)/length(x)
+  # Reformat into a data frame and include it in the output
+  dist <- data.frame("digit"=as.numeric(names(first_sigfigs)),
+                     "proportion"=as.numeric(first_sigfigs))
+  stats <- append(stats, list("digit_distribution"=dist))
+  
+  # This difference per digit is common to both statistics of interest
+  diff <- dist$proportion - log10(1+(1/dist$digit))
+  
+  # Use logical options to calculate statistic(s), add to output
+  if(m){
+  leemis <- max(diff)
+  stats <- append(stats, list("m_statistic"=leemis))
   }
-  
-  stats <- append(stats,
-                  list("digit_distribution"=data.frame("digit"=1:9,
-                                                       "proportion"=x_i)))
   
   if(d){
-    cho_gains <- rep(NA,9)
-    for(i in 1:9){
-    cho_gains[i] <- (x_i[i]-log10(1+(1/i)))^2
-  }  
-    
-    cho_gains <- sqrt(sum(cho_gains))
-    stats <- append(stats, list("m_statistic"=cho_gains))
-    
-   }
-  if(m){
-    leemis <- rep(NA,9)
-    for(i in 1:9){
-      leemis[i] <- x_i[i]-log10((1+(1/i)))
-    }
-    
-    leemis <- max(leemis)
-    stats <- append(stats, list("d_statistic"=leemis))
-     
+  cho_gains <- sqrt(sum((diff)^2))
+  stats <- append(stats, list("d_statistic"=cho_gains))
+  
   }
+  
+  # Give the list object the "benfords" class, to be used by our method
   class(stats) <- "benfords"
   return(stats)
+
 }
 ```
 
 ### Test Function
 ```{r}
+
+# Test with county-level vote data from the 2000 presidential election in Georgia 
 library(faraway)
-help(gavote)
+data(gavote)
 
 gore_votes <- gavote$gore
 benf_gore<-benfords_stats(gore_votes)
@@ -117,7 +119,7 @@ benf_gore<-benfords_stats(gore_votes)
 bush_votes <- gavote$bush
 benf_bush<-benfords_stats(bush_votes)
 
-
+# Test with population data - we shouldn't be able to observe fraud here
 counties <- read.csv("https://www2.census.gov/programs-surveys/popest/datasets/2010-2019/counties/totals/co-est2019-alldata.csv", header = T)
 
 births <- counties$BIRTHS2011
@@ -157,30 +159,38 @@ Create a new function called \texttt{print.benfords()} that will output a table 
 clearly organized and easy to understand.  Don't forget to document your code.
 
 ```{r}
-# Question 2 Code
 
 print.benfords <- function(x){
-  
+  # Need benfords class to contain at least one statistic to print 
   criteria <- x$d | x$m 
   
   if(!criteria){
     stop("Statistics empty, only digit distribution in object. Access with <ObjectName>$digit_distribution")
   }
   
+  # Define the symbols and the significance levels
   sym <- c(" " ,  "*" ,  "**" , "***")
   alpha <- c(1, 0.10, 0.05, 0.01, 0)
   
+  # Create a custom legend the way it's done in symnum()
   legend <- paste(c(rbind(sapply(alpha, format), 
                           c(sQuote(sym), ""))), 
                   collapse=" ")
+  
+  # Initiate a vector
   output <- c()
-    
+  
+  # Use logicals in the class object to determine outputs  
   if(x$d){
+    # Define cutpoints for this statistic
     cpD <- c(0 ,0.391, 0.651, 0.933 ,1)
-    symbolsD <- symnum(x$d_statistic, cpD, sym, legend = FALSE) 
+    # Use the symnum() function to get symbols given cutpoints
+    symbolsD <- symnum(x$d_statistic, cpD, sym, legend = FALSE)
+    # Include in output
     output[1] <- paste0(x$d_statistic,symbolsD)
   } else {output[1] <- "Empty"}
   
+  # Repeat for the second statistic
   if(x$m){
     cpM <- c(0, 0.341, 0.691, 0.875, 1)
     symbolsM <- symnum(x$m_statistic, cpM, sym, legend = FALSE) 
@@ -189,19 +199,19 @@ print.benfords <- function(x){
   
   
   # Give outputs names
-  names(output) <- c("Cho Gains' D Statistic", "Leemis' M Statistic")
+  names(output) <- c("Cho-Gains' D Statistic", "Leemis' M Statistic")
   
-  names(legend) <- "Significance"
-  
-  # Return in a list
-  return(list(noquote(output), noquote(legend)))
-  
+  # Print statistics and the significance code legend
+  print(noquote(output))
+  cat("\nSignificance:", legend)
 }
 
+
+print(benf_births)
 
 print(benf_gore)
 ```
 
+\
 
-
-
+Neither of these tests yield values that allow us to reject the null hypothesis; this is especially weird for the population data. 
